--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# Adding the config.py file. 
+config.py
+
+# Adding additional files.
+API_Pratice.ipynb
+random_numbers.ipynb
+Untitled.ipynb
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
